--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": "src/*",
-  "exclude": "src/test*"
+  "include": ["src/*"],
+  "exclude": ["src/test*"]
 }
