--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "pretty": true,
     "outDir": "./dist",
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true
   },
   "include": ["src/**/*"],
